--- a/opomniki/opomniki.html
+++ b/opomniki/opomniki.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> SUPPPPPPPPPPPP!
     <title>..:: Opomniki ::..</title>
     <meta charset="UTF-8">    
+    <link rel="stylesheet" type="text/css" href="stili.css">
+    <script src="skripta.js"></script>
+    
+<link rel="stylesheet" type="text/css" href="mystyle.css">
+
 </head>
 <body>
 <div class="pokrivalo">
